stderr
JudgeMan.java:21: error: ';' expected
            return "Full House"
                               ^
1 error
